--- a/index.html
+++ b/index.html
@@ -28,19 +28,19 @@
     <div class="product-card">
         <h3>Cetak Lanyard Kilat</h3>
         <p>Produksi tali lanyard dengan proses cepat dan hasil warna tajam.</p>
-        <a href="https://lanyardkilat.com" target="_blank">Kunjungi Lanyard Kilat</a>
+        <a href="halaman-lanyard.html"> target="_blank">Kunjungi Lanyard Kilat</a>
     </div>
 
     <div class="product-card">
         <h3>ID Card Custom</h3>
         <p>Bikin kartu identitas karyawan atau panitia dengan bahan PVC premium.</p>
-        <a href="https://talitali.co.id" target="_blank">Pesan di TaliTali</a>
+        <a href="id-card.html">Pesan di ID Card</a>
     </div>
 
     <div class="product-card">
         <h3>Wristband Event</h3>
         <p>Gelang tiket atau wristband bahan kain dan sintetis untuk keamanan acara.</p>
-        <a href="https://lanyardkilat.com/wristband" target="_blank">Lihat Koleksi Wristband</a>
+        <a href="wristband.html">Lihat Koleksi Wristband</a>
     </div>
 </main>
 
