--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="product-card">
         <h3>Cetak Lanyard Kilat</h3>
         <p>Produksi tali lanyard dengan proses cepat dan hasil warna tajam.</p>
-        <a href="halaman-lanyard.html"> target="_blank">Kunjungi Lanyard Kilat</a>
+        <a href="halaman-lanyard.html">Kunjungi Lanyard Kilat</a>
     </div>
 
     <div class="product-card">
