--- a/index.html
+++ b/index.html
@@ -2,51 +2,23 @@
 <html lang="id">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Layanan Tali Lanyard dan ID Card Berkualitas</title>
+    <title>Katalog Lanyard & ID Card</title>
     <style>
-        body { font-family: Arial, sans-serif; line-height: 1.6; margin: 20px; }
-        header { background: #f4f4f4; padding: 20px; text-align: center; }
-        nav { margin: 20px 0; }
-        .product-list { display: flex; gap: 20px; flex-wrap: wrap; }
-        .product-card { border: 1px solid #ddd; padding: 15px; border-radius: 8px; width: 250px; }
-        footer { margin-top: 40px; font-size: 0.8em; color: #666; }
+        body { font-family: Arial, sans-serif; line-height: 1.6; margin: 40px; text-align: center; background-color: #f9f9f9; }
+        .container { background: white; padding: 20px; border-radius: 10px; box-shadow: 0px 0px 10px rgba(0,0,0,0.1); display: inline-block; }
+        h1 { color: #333; }
+        .btn { display: block; margin: 10px 0; padding: 10px 20px; background: #007bff; color: white; text-decoration: none; border-radius: 5px; }
+        .btn:hover { background: #0056b3; }
     </style>
 </head>
 <body>
-
-<header>
-    <h1>Solusi Lanyard dan ID Card Terbaik</h1>
-    <p>Penyedia jasa cetak lanyard cepat dan berkualitas tinggi untuk kebutuhan kantor dan event Anda.</p>
-</header>
-
-<nav>
-    <h2>Daftar Produk Unggulan kami:</h2>
-</nav>
-
-<main class="product-list">
-    <div class="product-card">
-        <h3>Cetak Lanyard Kilat</h3>
-        <p>Produksi tali lanyard dengan proses cepat dan hasil warna tajam.</p>
-        <a href="halaman-lanyard.html">Kunjungi Lanyard Kilat</a>
+    <div class="container">
+        <h1>Layanan Produk Custom</h1>
+        <p>Silakan pilih produk untuk melihat detailnya:</p>
+        
+        <a href="halaman-lanyard.html" class="btn">Kunjungi Produk Lanyard</a>
+        <a href="id-card.html" class="btn">Kunjungi Produk ID Card</a>
+        <a href="wristband.html" class="btn">Kunjungi Produk Wristband</a>
     </div>
-
-    <div class="product-card">
-        <h3>ID Card Custom</h3>
-        <p>Bikin kartu identitas karyawan atau panitia dengan bahan PVC premium.</p>
-        <a href="id-card.html">Pesan di ID Card</a>
-    </div>
-
-    <div class="product-card">
-        <h3>Wristband Event</h3>
-        <p>Gelang tiket atau wristband bahan kain dan sintetis untuk keamanan acara.</p>
-        <a href="wristband.html">Lihat Koleksi Wristband</a>
-    </div>
-</main>
-
-<footer>
-    <p>&copy; 2026 Lanyard Project - Laporan 19 Januari 2026</p>
-</footer>
-
 </body>
 </html>
